[ci skip] Do not shadow CV results 6409486a9b40528b4f56cf4670cb4c73388b5fa4

--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ccbd743b",
+   "id": "7208e342",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b005e2eb",
+   "id": "1bf91ec3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9862695d",
+   "id": "a3c30ca4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a19a0060",
+   "id": "8a9aea5e",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d25b621c",
+   "id": "a37e7726",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "301b388e",
+   "id": "abb10124",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5728f223",
+   "id": "0b912c25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e737c28a",
+   "id": "4758fc38",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2f02c05",
+   "id": "73300c4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed6953ee",
+   "id": "8f073643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb82dca0",
+   "id": "1547c1b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49dddf26",
+   "id": "c0f22cb8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eecc476f",
+   "id": "1392fe93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a160b2b7",
+   "id": "01254344",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab211116",
+   "id": "082e8571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb85d96",
+   "id": "fa333cec",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4d90ee6",
+   "id": "01aeb38f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b98b8b4",
+   "id": "94537d6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e96bee3c",
+   "id": "cfdba699",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc6e8fa",
+   "id": "3d6723e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "641ec8a8",
+   "id": "c1713920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d30f9a",
+   "id": "0bdf6d25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f15891",
+   "id": "30df1083",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db35504d",
+   "id": "5a2bfd13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87c6ec5a",
+   "id": "bd959cb7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fd3d70a",
+   "id": "1e2b821e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcac30f5",
+   "id": "68c18127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c4aa05",
+   "id": "44c14af9",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0374fc24",
+   "id": "fc54ce48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba7b3c9",
+   "id": "699f13d2",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cf05dcd",
+   "id": "0031ff7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e4ab2a7",
+   "id": "e0591adb",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb2ce9ba",
+   "id": "710085e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9d087b2",
+   "id": "c34a3748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "292878a9",
+   "id": "bab6b96a",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f087a549",
+   "id": "c6a49b6f",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bae285c4",
+   "id": "4793499e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0e99ec9",
+   "id": "d2c889fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d8209f",
+   "id": "58a68847",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "218c769b",
+   "id": "4c7ea92a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4dcc44",
+   "id": "776ad296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
     "    skrub.DropCols(\n",
     "        cols=skrub.choose_from(\n",
     "            {\n",
-    "                \"none\": s.glob(\"\"),  # No column has empty name.\n",
+    "                \"none\": s.glob(\"\"),  # No column has an empty name.\n",
     "                \"load\": s.glob(\"load_*\"),\n",
     "                \"rolling_load\": s.glob(\"load_mw_rolling_*\"),\n",
     "                \"weather\": s.glob(\"weather_*\"),\n",
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f548c5e",
+   "id": "23364826",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b85eec0a",
+   "id": "555e7ef1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02daca07",
+   "id": "194896fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2376ff0b",
+   "id": "9bc9cc37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c81a67",
+   "id": "38587eff",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7264c1c4",
+   "id": "a4eaa06f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23c468b4",
+   "id": "d684cfc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "505ac237",
+   "id": "2a5c3409",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca4e1e23",
+   "id": "5b2c299f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a722dfa",
+   "id": "3e0e8baf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adada3f3",
+   "id": "2e951bf1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c01b78c",
+   "id": "71ef200b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94f7f167",
+   "id": "f2fa0925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3472192",
+   "id": "17b0bf81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68cc1cbe",
+   "id": "1f906e19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3ba62b3",
+   "id": "154c8191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1be7f1be",
+   "id": "d3076e79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4e0062b",
+   "id": "edc6389f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1197,7 @@
     "    }\n",
     "\n",
     "\n",
-    "cv_results = multioutput_predictions.skb.cross_validate(\n",
+    "multioutput_cv_results = multioutput_predictions.skb.cross_validate(\n",
     "    cv=ts_cv_5,\n",
     "    scoring=scoring,\n",
     "    return_train_score=True,\n",
@@ -1209,19 +1209,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "285ef701",
+   "id": "cc74b52b",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
-    "cv_results"
+    "multioutput_cv_results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7e52beb",
+   "id": "ae81fdba",
    "metadata": {},
    "outputs": [],
    "source": []
