--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5537fa6d",
+   "id": "eef9dc2a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20075679",
+   "id": "e90dcad5",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c02ee9c",
+   "id": "3c982a84",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce0d6079",
+   "id": "deb45e22",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9ae24b1",
+   "id": "e2ea6247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e72ac595",
+   "id": "02881be6",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b8eb52",
+   "id": "71300fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ee4319",
+   "id": "0ec300f2",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77a4330",
+   "id": "a8a055c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4da72bd2",
+   "id": "3242bd51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9983361a",
+   "id": "84a0d66b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47f1b808",
+   "id": "eb3662d9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e20fcc0",
+   "id": "bec00d56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b312161e",
+   "id": "f1846662",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47f27f9b",
+   "id": "4d8579f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d44e3817",
+   "id": "60d6e561",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2263aa3a",
+   "id": "957fd7fb",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8cb171c",
+   "id": "246be299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e062fa02",
+   "id": "470d6861",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18f326f2",
+   "id": "a2123c8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fc6f146",
+   "id": "25e86992",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01045907",
+   "id": "9c6ea869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3657a357",
+   "id": "2225ed94",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c378eb9",
+   "id": "3e27a28e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92035684",
+   "id": "ff775fab",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd9accb",
+   "id": "3653097a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c300d00",
+   "id": "e1fc0770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b94d482",
+   "id": "1ed0679d",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9250dc2f",
+   "id": "776b90b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c68ef927",
+   "id": "80a3888e",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25679b4c",
+   "id": "272e48c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e161531",
+   "id": "595e1e51",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "867be9db",
+   "id": "71a86762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f99a0ff",
+   "id": "de0c37a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5570160c",
+   "id": "7917fb03",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f9d195",
+   "id": "8d09335b",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8613b4b9",
+   "id": "af9444da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4031b630",
+   "id": "a30cb7fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3024ea6",
+   "id": "ce1f7e92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e898fa8",
+   "id": "103ac97d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da535484",
+   "id": "17891019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
     "    skrub.DropCols(\n",
     "        cols=skrub.choose_from(\n",
     "            {\n",
-    "                \"none\": s.glob(\"\"),  # No column has empty name.\n",
+    "                \"none\": s.glob(\"\"),  # No column has an empty name.\n",
     "                \"load\": s.glob(\"load_*\"),\n",
     "                \"rolling_load\": s.glob(\"load_mw_rolling_*\"),\n",
     "                \"weather\": s.glob(\"weather_*\"),\n",
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bad34383",
+   "id": "a0d1222c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee94b8e",
+   "id": "9070949e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb39526",
+   "id": "5b0faf84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe83cea",
+   "id": "5b245574",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e09de29",
+   "id": "d7e75058",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb9a763",
+   "id": "0168bec4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c913b92c",
+   "id": "cc06794b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ba106f6",
+   "id": "1d18bf1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6827ed23",
+   "id": "f316fae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0466689c",
+   "id": "62ca699b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "194e472b",
+   "id": "6e85370a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b58aba8",
+   "id": "22dfbae4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d0bdae3",
+   "id": "c0876780",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "add7f8da",
+   "id": "d18efeb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106be62e",
+   "id": "2425e0dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0917dd3",
+   "id": "43c63785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53916f5d",
+   "id": "1684e680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e75fb7cc",
+   "id": "e16cb677",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1197,7 @@
     "    }\n",
     "\n",
     "\n",
-    "cv_results = multioutput_predictions.skb.cross_validate(\n",
+    "multioutput_cv_results = multioutput_predictions.skb.cross_validate(\n",
     "    cv=ts_cv_5,\n",
     "    scoring=scoring,\n",
     "    return_train_score=True,\n",
@@ -1209,19 +1209,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ba7537c",
+   "id": "a16eb6cc",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
-    "cv_results"
+    "multioutput_cv_results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41a55e4",
+   "id": "b41833c5",
    "metadata": {},
    "outputs": [],
    "source": []
